Fixed nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost kkw.kirio.dev;
+  server_name kkw.julien-ziegler.de;
 
   root /usr/share/nginx/html;
   index index.html index.htm;
