Fixed nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
   listen 80;
-  server_name kkw.julien-ziegler.de;
+
+  listen [::]:80;
+
+  server_name kkw.julien-ziegler.de kkw.kirio.dev;
 
   root /usr/share/nginx/html;
   index index.html index.htm;
