test option in nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
 
   listen [::]:80;
 
-  server_name kkw.julien-ziegler.de kkw.kirio.dev;
+  #server_name kkw.julien-ziegler.de kkw.kirio.dev;
 
   root /usr/share/nginx/html;
   index index.html index.htm;
