--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^19.0.5",
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.3.1",
